--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 </head>
 <body>
 	<h1> Our Menu</h1>
-	<div>
+	<section>
 		<h2>Chicken</h2>
-		<p>lorem ipsum dolor< sit amet,/p>
-	</div>
-	<div>
+		<p>lorem ipsum dolor sit amet</p>
+	</section>
+	<section>
 		<h2>Beef</h2>
-		<p>lorem ipsum dolor< sit amet,/p>
-	</div>
-	<div>
+		<p>lorem ipsum dolor sit amet</p>
+	</section>
+	<section>
 		<h2>Sushi</h2>
-		<p>lorem ipsum dolor< sit amet,/p>
-	</div>
+		<p>lorem ipsum dolor sit amet</p>
+	</section>
 </body>
 </html>
