created the stylesheet

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!doctype HTML>
 <html>
 <head>
-	
+	<link rel = "stylesheet" href = "stylesheet.css">
 </head>
 <body>
 	<h1> Our Menu</h1>
 	<section>
-		<h2>Chicken</h2>
-		<p>lorem ipsum dolor sit amet</p>
+		<h2>HTML</h2>
+		<p>"Hypertext" refers to links that connect web pages to one another, either within a single website or between websites. Links are a fundamental aspect of the Web. By uploading content to the Internet and linking it to pages created by other people, you become an active participant in the World Wide Web.</p>
 	</section>
 	<section>
-		<h2>Beef</h2>
-		<p>lorem ipsum dolor sit amet</p>
+		<h2>CSS</h2>
+		<p>CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.This separation can improve content accessibility, provide more flexibility and control in the specification of presentation characteristics, enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file which reduces complexity and repetition in the structural content as well as enabling the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.</p>
 	</section>
 	<section>
-		<h2>Sushi</h2>
-		<p>lorem ipsum dolor sit amet</p>
+		<h2>JavaScript</h2>
+		<p>JavaScript is a text-based programming language used both on the client-side and server-side that allows you to make web pages interactive. Where HTML and CSS are languages that give structure and style to web pages, JavaScript gives web pages interactive elements that engage a user.</p>
 	</section>
 </body>
 </html>
