updated the index file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype HTML>
 <html>
 <head>
-	<link rel = "stylesheet" href = "stylesheet.css">
+	<link rel = "css" href = "stylesheet.css">
 </head>
 <body>
 	<h1> Our Menu</h1>
